[gd_scene load_steps=9 format=3 uid="uid://lloy1vw3eh46"]

[ext_resource type="Script" uid="uid://c2qibhp178600" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="Script" uid="uid://c2mpcf0tsmomp" path="res://entities/player/camera_spring_arm.gd" id="2_abrql"]
[ext_resource type="PackedScene" uid="uid://bllejk6l2l8y7" path="res://assets/models/player.glb" id="2_fkugw"]
[ext_resource type="Script" uid="uid://c53rh8hvmsb16" path="res://entities/player/camera_follow.gd" id="3_sglur"]
[ext_resource type="Script" uid="uid://cqvkgfiuwoyd6" path="res://systems/storage.gd" id="4_bls4j"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_8fjmc"]
points = PackedVector3Array(0.3752375, 1.1494809, 0.0039219754, -0.3929091, 0.80857646, -0.024766296, -0.39589185, 0.7629724, -0.05940351, 0.19293308, -0.012096167, 0.064510144, -0.1479432, 1.8783956, 0.1574651, 0.0379121, 1.785395, -0.18339603, 0.22393729, 0.05022776, -0.12136033, -0.20986664, -0.012096167, 0.064510144, 0.19704306, 0.81704736, 0.19452758, -0.20986664, 0.018968701, -0.12136033, 0.16192889, 1.8783956, 0.1574651, -0.18298294, 0.81704736, 0.19452758, -0.17894739, 1.8783956, -0.12136033, 0.16192889, 1.8783956, -0.1523979, 0.40987754, 0.7629724, 0.064510144, -0.36488762, 1.1965215, 0.09550828, 0.37887332, 0.9179085, -0.090401635, -0.20921339, 0.79064673, -0.15766679, -0.39589185, 0.7629724, 0.064510144, 0.34786913, 1.3203927, 0.09550828, -0.27187505, -0.012096167, 0.0025927564, 0.2547716, -0.012096167, -0.05940351, 0.19118187, 0.71672875, -0.15298028, 0.22393729, 1.8783956, -0.028405376, -0.20986664, 0.11196917, 0.09550828, -0.20986664, 1.8783956, 0.064510144, -0.332744, 1.3759024, -0.024389781, 0.0954363, 1.9235395, 0.091770664, 0.40987754, 0.7629724, -0.05940351, 0.19293308, 0.11196917, 0.09550828, -0.054930605, 1.7543302, -0.18339603, -0.11051783, 1.9200115, -0.0847824)

[sub_resource type="SphereShape3D" id="SphereShape3D_sglur"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sglur"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_symyc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_8fjmc")

[node name="player" parent="." instance=ExtResource("2_fkugw")]

[node name="Skeleton3D" parent="player/Bones" index="0"]
bones/0/position = Vector3(-7.3951544e-25, -0.564456, 0.3106829)
bones/6/rotation = Quaternion(0.37248215, 0.38111627, 0.70001453, -0.475381)
bones/7/rotation = Quaternion(-0.29047567, -0.5920123, 0.51948255, 0.54339975)
bones/8/rotation = Quaternion(-0.009475089, -0.042804785, 0.042042334, 0.9981535)
bones/10/rotation = Quaternion(-0.29047567, 0.5920123, -0.51948255, 0.54339975)
bones/11/rotation = Quaternion(-0.009475089, 0.042804778, -0.042042334, 0.9981535)
bones/13/rotation = Quaternion(-0.76808715, -0.19749023, 0.17317395, 0.5839953)
bones/14/rotation = Quaternion(-0.005578498, 0.0012879694, -0.0013025402, 0.9999828)
bones/16/rotation = Quaternion(-0.76808715, 0.19749027, -0.17317393, 0.5839953)
bones/17/rotation = Quaternion(-0.005578498, -0.0012879694, 0.0013025403, 0.9999828)
bones/18/position = Vector3(2.3577058, -0.46421218, -0.5577283)
bones/19/position = Vector3(1.1146251, -5.6855564, -0.72589415)
bones/21/position = Vector3(4.7483306, 1.5218359, -0.56661)
bones/22/position = Vector3(-2.3577058, -0.46421218, -0.5577283)
bones/23/position = Vector3(-1.1146251, -5.6855564, -0.72589415)
bones/25/position = Vector3(-4.7483306, 1.5218359, -0.56661)

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1018963, 0)
script = ExtResource("2_abrql")

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.344357)
shape = SubResource("SphereShape3D_sglur")
spring_length = 6.0
margin = 0.2

[node name="SpringPosition" type="Node3D" parent="SpringArmPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.013057709, 0, -2.276524)

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot" node_paths=PackedStringArray("spring_arm")]
script = ExtResource("3_sglur")
spring_arm = NodePath("../SpringArm3D/SpringPosition")

[node name="Area3D" type="Area3D" parent="."]

[node name="Hitbox" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.9803927, 0)
shape = SubResource("CapsuleShape3D_sglur")

[node name="Storage" type="Node" parent="."]
script = ExtResource("4_bls4j")
max_capacity = 2
used_capacity = 0
metadata/_custom_type_script = "uid://cqvkgfiuwoyd6"

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("..")
update_scale = false

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="player"]
